Fix task notification and icon issue fixes https://github.com/openshift/origin-web-console/issues/603

--- a/app/styles/_core.less
+++ b/app/styles/_core.less
@@ -734,11 +734,11 @@ a.subtle-link {
 }
 
 .tasks {
-  margin-bottom: 20px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 10px;
   background-color: #ffffff;
+  font-weight: normal;
+  margin-bottom: 20px;
+  padding: 20px;
+  position: relative;
   &.success {
     border: 1px solid #3f9c35;
     border-left: 3px solid #3f9c35;
@@ -748,14 +748,30 @@ a.subtle-link {
     border-left: 3px solid #cc0000;
   }
   .task-icon {
-    font-size: 45px;
+    font-size: 38px;
+    left: 15px;
     position: absolute;
+    top: 14px;
   }
   .task-content {
-    min-height: 45px;
+    font-size: 16px;
+    .task-info {
+      margin-left: 45px;
+    }
+    .task-title {
+      margin-right: 10px;
+    }
+    .task-links {
+      font-size: 13px;
+      font-weight: 300;
+      white-space: nowrap;
+    }
   }
-  .task-info {
-    margin-left: 55px;
+  .task-expanded-details {
+    margin-top: 20px;
+    .alert {
+      margin-bottom: 0;
+    }
   }
 }
 
